--- a/site/index.html
+++ b/site/index.html
@@ -4,33 +4,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!--Font text-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nerko+One&family=New+Amsterdam&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Sora:wght@100..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
+  <!--JQuery-->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
     </script>
+  <!--Fontawaresome-->
   <link rel="stylesheet" href="../fontawesome/fontawesome-free-6.6.0-web/css/all.min.css">
+  <!--Css-->
   <link rel="stylesheet" href="../css/estilos.css">
 
   <title>Controle Financeiro</title>
+
 </head>
+
 
 <body>
   <!-- Inicio Navegação / Logo -->
 
-
   <head>
-    <nav class="bg-primary" onclick="toggleClear()">
+    <nav class="bg-primary" onclick="menu.offOpacity()">
       <div class="nav">
         <img src="../img/pigMenu.png" alt="">
         <h2 class="titulo">Controle Finaças</h2>
         <div class="hamburgue">
-          <img src="../img/menuHamburgue.png" onmouseenter="toggle()" onclick="toggle()" id="hamburgue">
+          <img src="../img/menuHamburgue.png" onmouseenter="menu.onOpacity()" onclick="menu.onOpacity()" id="hamburgue">
           <a href="index.html"></a>
         </div>
       </div>
@@ -40,7 +51,7 @@
   <!-- Fim Navegação / Logo -->
 
   <!-- Inicio Mail -->
-  <main onclick="toggleClear()">
+  <main onclick="menu.offOpacity()">
     <div id="menu">
       <a href="index.html">Home</a>
       <a href="consulta.html">Consulta</a>
@@ -55,7 +66,7 @@
 
           <!--year- -->
           <select name="year" class="form-control" id="year">
-            <option value="year">Year</option>
+            <option value="">Year</option>
             <option value="2024">2024</option>
             <option value="2025">2025</option>
             <option value="2026">2026</option>
@@ -63,7 +74,7 @@
 
           <!--Month- -->
           <select name="month" class="form-control" id="month">
-            <option value="month">Month</option>
+            <option value="">Month</option>
             <option value="janeiro">janeiro</option>
             <option value="fevereiro">fevereiro</option>
             <option value="março">março</option>
@@ -83,7 +94,7 @@
 
           <!--Type- -->
           <select name="type" class="form-control" id="type">
-            <option value="type">type</option>
+            <option value="">type</option>
             <option value="alimentacao">Alimentação</option>
             <option value="saude">Saúde</option>
             <option value="lazer">Lazer</option>
@@ -98,17 +109,37 @@
           <input type="text" class="form-control" id="description" placeholder="Description">
           <input type="text" class="form-control" id="valor" placeholder="valor">
 
-          <button type="button" class="btn btn-primary" id="btn">+</button>
+          <button type="button" onclick="cadastrarDespesas.cadastrar()" class="btn btn-primary" id="btn"><i
+              class="fa-solid  fa-plus"></i></button>
         </div>
-
       </div>
     </div>
+
+    <!-- Modal registro dispesas-->
+    <div class="modal fade" id="registro-Despesas" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 id="tituloModal">Titulo</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="textModal">
+            texto body
+          </div>
+          <div class="modal-footer">
+            <button type="button" id="btnModal" data-bs-dismiss="modal">botao</button>
+          </div>
+        </div>
+      </div>
     </div>
+
   </main>
+
+  <!--Inicio Rodape-->
   <footer>
     <div class="footer bg-primary"></div>
   </footer>
 </body>
-<script src="javaScript.js">  </script>
+<script src="app.js">  </script>
 
 </html>
