--- a/site/index.html
+++ b/site/index.html
@@ -95,10 +95,10 @@
           <!--Type- -->
           <select name="type" class="form-control" id="type">
             <option value="">type</option>
-            <option value="alimentacao">Alimentação</option>
-            <option value="saude">Saúde</option>
+            <option value="alimentação">Alimentação</option>
+            <option value="saúde">Saúde</option>
             <option value="lazer">Lazer</option>
-            <option value="educacao">Educação</option>
+            <option value="educação">Educação</option>
             <option value="transporte">Transporte</option>
           </select>
         </div>
